--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.3.2
 psycopg2-binary==2.9.1
-python-dateutil==
+python-dateutil==2.5.0
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
