--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-crispy-forms==1.13.0
 django-storages==1.12.2
 env==0.1.0
 gunicorn==20.1.0
-heroku==0.1.4
+heroku==
 jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.3.2
