--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.2
+dnspython==2.1.0
 env==0.1.0
 gunicorn==20.1.0
 heroku==0.1.4
@@ -14,10 +15,11 @@ jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.3.2
 psycopg2-binary==2.9.1
-python-dateutil==2.5.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
 s3transfer==0.5.0
+slug==2.0
 sqlparse==0.4.2
 stripe==2.60.0
