--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-storages==1.12.2
 dnspython==2.1.0
 env==0.1.0
 gunicorn==20.1.0
-heroku==0.1.4
+heroku3==3.1.0
 jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.3.2
